src/test/ui/span/regions-escape-loop-via-variable.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/regions-escape-loop-via-variable.rs:11:13
   |
LL |         let x = 1 + *p;
   |                     -- borrow later used here
LL |         p = &x;
   |             ^^ borrowed value does not live long enough
LL |     }
   |     - `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
